Input de busqueda - Agregado

--- a/src/app/maps/screens/map-screen/map-screen.component.html
+++ b/src/app/maps/screens/map-screen/map-screen.component.html
@@ -3,4 +3,5 @@
     <app-map-view></app-map-view>
     <app-btn-my-location></app-btn-my-location>
 </ng-template>
+<app-search-bar></app-search-bar>
 <app-angular-logo></app-angular-logo>
