Obtenrer la distancia y duracion del recorrido entre dos puntos - Agregado

--- a/src/app/maps/components/search-results/search-results.component.html
+++ b/src/app/maps/components/search-results/search-results.component.html
@@ -11,6 +11,7 @@
         <p>{{ place.place_name}}</p>
         <hr>
         <button class="btn btn-sm "
+        (click)="getDirections(place)"
         [ngClass]="(place.id === selectedId)? 'btn-outline-light':'btn-outline-primary'">Ir</button>
     </li>
 </ul>
